--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,18 +14,23 @@
     "@monaco-editor/react": "^4.5.1",
     "@uiw/react-codemirror": "^4.21.2",
     "axios": "^1.4.0",
+    "html-react-parser": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
+    "remark-gfm": "^3.0.1",
     "socket.io-client": "^4.6.2",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "@typescript-eslint/parser": "^5.37.0",
     "@vitejs/plugin-react": "^2.1.0",
     "autoprefixer": "^10.4.11",
+    "daisyui": "^3.1.1",
     "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
