--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@monaco-editor/react": "^4.5.1",
     "@uiw/react-codemirror": "^4.21.2",
     "axios": "^1.4.0",
+    "framer-motion": "^10.12.17",
     "html-react-parser": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
